Added code to replace getLast()